dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <defaultValue>&quot;                                                                                                    &quot;</defaultValue>
    <description>Space to push the dropdown Action (Edit/Delete) to the further right of Related List</description>
    <label>Space</label>
    <length>250</length>
    <type>Text</type>
</CustomField>