dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Defaults to &apos;Open&apos; when new review created
Automatically updates to &apos;Closed&apos; on 31st March and 30th September&quot;</description>
    <inlineHelpText>Defaults to &apos;Open&apos; when new review created
Automatically updates to &apos;Closed&apos; on 31st March and 30th September&quot;</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>