dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/TechSolution__c.field-meta.xml
<CustomField>
    <fullName>TechSolution__c</fullName>
    <description>How frequently do clients come to you with their chosen software solution?</description>
    <inlineHelpText>How frequently do clients come to you with their chosen software solution?</inlineHelpText>
    <label>Select software solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>About half the time</fullName>
            </value>
            <value>
                <fullName>Most of the time</fullName>
            </value>
            <value>
                <fullName>All the time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>