dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/fields/TechSolutionOtherText__c.field-meta.xml
<CustomField>
    <fullName>TechSolutionOtherText__c</fullName>
    <description>Any other technologies in your stack?[up to 50 characters]</description>
    <inlineHelpText>Any other technologies in your stack?[up to 50 characters]</inlineHelpText>
    <label>Any other technologies in your stack?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>