dxscale/sales/practiceEfficiencyReview/objects/PracticeEfficiencyReviewV2__c/validationRules/PracticeEfficiencyReviewLocked.validationRule-meta.xml
<ValidationRule>
    <fullName>PracticeEfficiencyReviewLocked</fullName>
    <active>true</active>
    <description>Prevent to Edit the Status=Closed Record.</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;System Administrator&apos;, ISPICKVAL(Status__c, &apos;Closed&apos;))</errorConditionFormula>
    <errorMessage>Not allow to modify the &apos;Closed&apos;  Practice Efficiency Review .  Please create the new Practice Efficiency Review.</errorMessage>
</ValidationRule>